// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`typegen generateRosLib basic snapshot 1`] = `
"
    export declare interface json {
}
    export declare interface TopicsToMessageDefinition {
    \\"/my_topic\\": Messages.std_msgs__ColorRGBA;
    \\"/empty_topic\\": Messages.std_msgs__NoDef;
}
    export declare interface Duration {
    sec: number;
    nsec: number;
}
    export declare interface Time {
    sec: number;
    nsec: number;
}

    /**
     * This type contains every message declaration in your bag, so that you can
     * refer to the type \\"std_msgs/RGBA\\" as \\"std_msgs__RGBA\\" wherever you like.
     */
    export declare namespace Messages {
    export interface std_msgs__ColorRGBA {
        r: number;
        g: number;
        b: number;
        a: number;
    }
    export interface std_msgs__NoDef {
    }
}

    /**
     * To correctly type your inputs, you use this type to refer to specific
     * input topics, e.g. 'Input<\\"/your_input_topic\\">'. If you have
     * multiple input topics, use a union type, e.g.
     * 'Input<\\"/your_input_topic_1\\"> |
     * Input<\\"/your_input_topic_2\\">'.
     *
     * These types are dynamically generated from the bag(s) currently in your
     * webviz session, so if a datatype changes, your Node Playground node may
     * not compile on the newly formatted bag.
     */
    export declare interface Input<T extends keyof TopicsToMessageDefinition> {
    topic: T;
    receiveTime: Time;
    message: TopicsToMessageDefinition[T];
}
  "
`;

exports[`typegen generateRosLib more complex snapshot 1`] = `
"
    export declare interface json {
}
    export declare interface TopicsToMessageDefinition {
    \\"/topic_0\\": Messages.tf2_msgs__TFMessage;
    \\"/topic_1\\": Messages.geometry_msgs__TransformStamped;
    \\"/topic_2\\": Messages.std_msgs__Header;
    \\"/topic_3\\": Messages.geometry_msgs__Transform;
    \\"/topic_4\\": Messages.geometry_msgs__Vector3;
    \\"/topic_5\\": Messages.geometry_msgs__Quaternion;
    \\"/topic_6\\": Messages.sensor_msgs__Image;
    \\"/topic_7\\": Messages.velodyne_msgs__VelodyneScan;
    \\"/topic_8\\": Messages.velodyne_msgs__VelodynePacket;
    \\"/topic_9\\": Messages.sensor_msgs__PointCloud2;
    \\"/topic_10\\": Messages.sensor_msgs__PointField;
    \\"/topic_11\\": Messages.sensor_msgs__Range;
    \\"/topic_12\\": Messages.radar_driver__RadarTracks;
    \\"/topic_13\\": Messages.radar_driver__Track;
    \\"/topic_14\\": Messages.diagnostic_msgs__DiagnosticStatus;
    \\"/topic_15\\": Messages.diagnostic_msgs__KeyValue;
    \\"/topic_16\\": Messages.diagnostic_msgs__DiagnosticArray;
    \\"/topic_17\\": Messages.sensor_msgs__TimeReference;
    \\"/topic_18\\": Messages.sensor_msgs__NavSatFix;
    \\"/topic_19\\": Messages.sensor_msgs__NavSatStatus;
    \\"/topic_20\\": Messages.nav_msgs__Odometry;
    \\"/topic_21\\": Messages.geometry_msgs__PoseWithCovariance;
    \\"/topic_22\\": Messages.geometry_msgs__Pose;
    \\"/topic_23\\": Messages.geometry_msgs__Point;
    \\"/topic_24\\": Messages.geometry_msgs__TwistWithCovariance;
    \\"/topic_25\\": Messages.geometry_msgs__Twist;
    \\"/topic_26\\": Messages.bond__Status;
    \\"/topic_27\\": Messages.visualization_msgs__MarkerArray;
    \\"/topic_28\\": Messages.visualization_msgs__Marker;
    \\"/topic_29\\": Messages.std_msgs__ColorRGBA;
}
    export declare interface Duration {
    sec: number;
    nsec: number;
}
    export declare interface Time {
    sec: number;
    nsec: number;
}

    /**
     * This type contains every message declaration in your bag, so that you can
     * refer to the type \\"std_msgs/RGBA\\" as \\"std_msgs__RGBA\\" wherever you like.
     */
    export declare namespace Messages {
    export interface tf2_msgs__TFMessage {
        transforms: geometry_msgs__TransformStamped[];
    }
    export interface geometry_msgs__TransformStamped {
        header: std_msgs__Header;
        child_frame_id: string;
        transform: geometry_msgs__Transform;
    }
    export interface std_msgs__Header {
        seq: number;
        stamp: Time;
        frame_id: string;
    }
    export interface geometry_msgs__Transform {
        translation: geometry_msgs__Vector3;
        rotation: geometry_msgs__Quaternion;
    }
    export interface geometry_msgs__Vector3 {
        x: number;
        y: number;
        z: number;
    }
    export interface geometry_msgs__Quaternion {
        x: number;
        y: number;
        z: number;
        w: number;
    }
    export interface sensor_msgs__Image {
        header: std_msgs__Header;
        height: number;
        width: number;
        encoding: string;
        is_bigendian: number;
        step: number;
        data: Uint8Array;
    }
    export interface velodyne_msgs__VelodyneScan {
        header: std_msgs__Header;
        packets: velodyne_msgs__VelodynePacket[];
    }
    export interface velodyne_msgs__VelodynePacket {
        stamp: Time;
        data: Uint8Array;
    }
    export interface sensor_msgs__PointCloud2 {
        header: std_msgs__Header;
        height: number;
        width: number;
        fields: sensor_msgs__PointField[];
        is_bigendian: boolean;
        point_step: number;
        row_step: number;
        data: Uint8Array;
        is_dense: boolean;
    }
    export interface sensor_msgs__PointField {
        name: string;
        offset: number;
        datatype: number;
        count: number;
    }
    export interface sensor_msgs__Range {
        header: std_msgs__Header;
        radiation_type: number;
        field_of_view: number;
        min_range: number;
        max_range: number;
        range: number;
    }
    export interface radar_driver__RadarTracks {
        header: std_msgs__Header;
        tracks: radar_driver__Track[];
    }
    export interface radar_driver__Track {
        status: number;
        number: number;
        range: number;
        rate: number;
        accel: number;
        angle: number;
        width: number;
        late_rate: number;
        moving: boolean;
        power: number;
        absolute_rate: number;
    }
    export interface diagnostic_msgs__DiagnosticStatus {
        level: number;
        name: string;
        message: string;
        hardware_id: string;
        values: diagnostic_msgs__KeyValue[];
    }
    export interface diagnostic_msgs__KeyValue {
        key: string;
        value: string;
    }
    export interface diagnostic_msgs__DiagnosticArray {
        header: std_msgs__Header;
        status: diagnostic_msgs__DiagnosticStatus[];
    }
    export interface sensor_msgs__TimeReference {
        header: std_msgs__Header;
        time_ref: Time;
        source: string;
    }
    export interface sensor_msgs__NavSatFix {
        header: std_msgs__Header;
        status: sensor_msgs__NavSatStatus;
        latitude: number;
        longitude: number;
        altitude: number;
        position_covariance: number[];
        position_covariance_type: number;
    }
    export interface sensor_msgs__NavSatStatus {
        status: number;
        service: number;
    }
    export interface nav_msgs__Odometry {
        header: std_msgs__Header;
        child_frame_id: string;
        pose: geometry_msgs__PoseWithCovariance;
        twist: geometry_msgs__TwistWithCovariance;
    }
    export interface geometry_msgs__PoseWithCovariance {
        pose: geometry_msgs__Pose;
        covariance: number[];
    }
    export interface geometry_msgs__Pose {
        position: geometry_msgs__Point;
        orientation: geometry_msgs__Quaternion;
    }
    export interface geometry_msgs__Point {
        x: number;
        y: number;
        z: number;
    }
    export interface geometry_msgs__TwistWithCovariance {
        twist: geometry_msgs__Twist;
        covariance: number[];
    }
    export interface geometry_msgs__Twist {
        linear: geometry_msgs__Vector3;
        angular: geometry_msgs__Vector3;
    }
    export interface bond__Status {
        header: std_msgs__Header;
        id: string;
        instance_id: string;
        active: boolean;
        heartbeat_timeout: number;
        heartbeat_period: number;
    }
    export interface visualization_msgs__MarkerArray {
        markers: visualization_msgs__Marker[];
    }
    export interface visualization_msgs__Marker {
        header: std_msgs__Header;
        ns: string;
        id: number;
        type: number;
        action: number;
        pose: geometry_msgs__Pose;
        scale: geometry_msgs__Vector3;
        color: std_msgs__ColorRGBA;
        lifetime: Duration;
        frame_locked: boolean;
        points: geometry_msgs__Point[];
        colors: std_msgs__ColorRGBA[];
        text: string;
        mesh_resource: string;
        mesh_use_embedded_materials: boolean;
    }
    export interface std_msgs__ColorRGBA {
        r: number;
        g: number;
        b: number;
        a: number;
    }
}

    /**
     * To correctly type your inputs, you use this type to refer to specific
     * input topics, e.g. 'Input<\\"/your_input_topic\\">'. If you have
     * multiple input topics, use a union type, e.g.
     * 'Input<\\"/your_input_topic_1\\"> |
     * Input<\\"/your_input_topic_2\\">'.
     *
     * These types are dynamically generated from the bag(s) currently in your
     * webviz session, so if a datatype changes, your Node Playground node may
     * not compile on the newly formatted bag.
     */
    export declare interface Input<T extends keyof TopicsToMessageDefinition> {
    topic: T;
    receiveTime: Time;
    message: TopicsToMessageDefinition[T];
}
  "
`;

exports[`typegen generateRosLib works with zero topics or datatypes 1`] = `
"
    export declare interface json {
}
    export declare interface TopicsToMessageDefinition {
}
    export declare interface Duration {
    sec: number;
    nsec: number;
}
    export declare interface Time {
    sec: number;
    nsec: number;
}

    /**
     * This type contains every message declaration in your bag, so that you can
     * refer to the type \\"std_msgs/RGBA\\" as \\"std_msgs__RGBA\\" wherever you like.
     */
    export declare namespace Messages { }

    /**
     * To correctly type your inputs, you use this type to refer to specific
     * input topics, e.g. 'Input<\\"/your_input_topic\\">'. If you have
     * multiple input topics, use a union type, e.g.
     * 'Input<\\"/your_input_topic_1\\"> |
     * Input<\\"/your_input_topic_2\\">'.
     *
     * These types are dynamically generated from the bag(s) currently in your
     * webviz session, so if a datatype changes, your Node Playground node may
     * not compile on the newly formatted bag.
     */
    export declare interface Input<T extends keyof TopicsToMessageDefinition> {
    topic: T;
    receiveTime: Time;
    message: TopicsToMessageDefinition[T];
}
  "
`;
